# Husky-Vis

./: .gitignore  .gitmodules  README.md  greenkeeper.json
backend/: CMakeLists.txt
backend-express/: app.js  gulpfile.babel.js  package.json
backend-express-es6/: gulpfile.babel.js  package.json  webpack.config.js
backend-express-es6/lib/: app.js  index.js
backend-express-es6/src/: app.js
backend-express-es6/src/controller/: index.js  index_tmp.js  selectAttribute.js
backend-express-es6/src/controller/connect/: connect.js  suggestions_raw.json
backend-express-es6/src/controller/connect/gen-nodejs/: App.js  app_types.js  client.js
backend-express-es6/src/controller/encoding/: encoding.js
backend-express-es6/src/controller/encoding/charts-map/: map.js
backend-express-es6/src/controller/encoding/charts-map/charts/: bar.js  line.js  point.js
backend-express-es6/src/controller/handler/: handler.js
backend-express-es6/src/routes/: index.js
backend-express/controller/: mainController.js
backend-express/public/javascripts/: visualization.js
backend-express/routes/: index.js  init.js  selectAttribute.js
backend-express/routes/common/: common.js
backend-express/routes/connect/: connect.js  debug_index.js
backend-express/routes/connect/gen-nodejs/: app_types.js
backend-express/routes/handler/: handler.js
backend-express/views/: chartFrame.jade  layout.jade
backend/app/: CMakeLists.txt  app.thrift  controller.hpp  preprocess.hpp  server.cpp  visualization.cpp
backend/app/gen-cpp/: App.cpp  App.h  App_server.skeleton.cpp  CMakeLists.txt  Something.cpp  Something.h  Something_server.cpp  Something_server.skeleton.cpp  app_constants.cpp  app_constants.h  app_types.cpp  app_types.h  server
backend/core/: CMakeLists.txt
backend/core/channel/: CMakeLists.txt  aggregate_channel.cpp  aggregate_channel.hpp  chart_type_channel.cpp  chart_type_channel.hpp  generate_channel.cpp  generate_channel.hpp  process_aggregatedata_channel.cpp  process_aggregatedata_channel.hpp  process_rawdata_channel.cpp  process_rawdata_channel.hpp  statistic_channel.cpp  statistic_channel.hpp
backend/core/common/: CMakeLists.txt  base_obj.cpp  base_obj.hpp  constant.cpp  constant.hpp  constant.json  util.hpp  utils.cpp  utils.hpp
backend/core/dataloader/: CMakeLists.txt  dataloader.cpp  dataloader.hpp
backend/core/dataloader/mockup/schema/: birdstrikes-schema.json
backend/husky/: CMakeLists.txt  machine.cfg.10.yuying  machine.cfg.20.yuying  uexec.sh
backend/husky/husky-vis/: CMakeLists.txt
backend/husky/husky-vis/core/: constant.hpp
backend/husky/husky-vis/core/channel/: generate_channel.hpp
backend/husky/husky-visualization/: CMakeLists.txt  visualization.cpp
backend/husky/husky-visualization/core/channel/: aggregate_channel.cpp  aggregate_channel.hpp  chart_type_channel.cpp  chart_type_channel.hpp  generate_channel.cpp  generate_channel.hpp  statistic_channel.cpp  statistic_channel.hpp
backend/husky/husky-visualization/core/common/: CMakeLists.txt  base_obj.cpp  constant.cpp  constant.hpp  constant.json
backend/husky/husky-visualization/core/dataloader/: dataloader.cpp
backend/husky/husky-visualization/test/: core_channel_aggregate_channel_unittest.cpp  core_channel_chart_type_channel_unittest.cpp  core_channel_generate_channel_unittest.cpp  core_channel_statistic_channel_unittest.cpp  core_common_constant_unittest.cpp  core_dataloader_dataloader_unittest.cpp  test
backend/test/: CMakeLists.txt  aggregate_channel.cpp  aggregate_channel_test.cpp  chart_type_channel.cpp  chart_type_channel_test.cpp  constant.cpp  constant_test.cpp  dataloader_test.cpp  generate_channel_test.cpp  mongo_test.cpp  preprocess_test.cpp  process_aggregatedata_channel_test.cpp  process_rawdata_channel_test.cpp  statistic_channel_test.cpp  test_schema.json  util_test.cpp  utils_test.cpp
frontend/: app.js  package.json
frontend-vue/: README.md  app.js  index.html  package.json
frontend-vue/config/: index.js
frontend-vue/mock-server/: birdstrikes-schema.json  suggestions.json  suggestions_raw.json
frontend-vue/server/routes/: index.js  users.js
frontend-vue/src/: App.vue  main.js
frontend-vue/src/assets/javascripts/: leftPanel.js  visualization.js
frontend-vue/src/components/: ChartFrame.vue  SelectedList.vue
frontend-vue/src/router/: index.js
frontend/controller/: index.js
frontend/public/javascripts/: leftPanel.js  main.js  visualization.js
frontend/public/stylesheets/: style.css
frontend/routes/: client.js  index.js  init.js  selectAttribute.js  vis.js
frontend/routes/connect/: connect.js  debug_api.js  suggestions.json
frontend/routes/connect/gen-nodejs/: App.js  app_types.js  client.js
frontend/routes/encoding/: encoding.js
frontend/routes/encoding/charts-map/charts/: bar.js  line.js  point.js
frontend/routes/gen-nodejs/: App.js  Something.js  app_types.js  client.js
frontend/routes/gen-nodejs/gen-nodejs/: App.js
frontend/routes/handler/: handler.js
frontend/routes/util/: const.js  encoding.js  util.js
frontend/routes/util/channel/: aggregateTypeChannel.js  chartTypeChannel.js  generatedChannel.js  init.js  processDataChannel.js  statisticalMethodChannel.js
frontend/routes/util/charts/: bar.js  init.js  line.js  point.js
frontend/test/: aggregateTypeChannelTest.js  chartTypeChannelTest.js  encodingTest.js  generatedChannelTest.js  processDataChannelTest.js  statisticMethodChannelTest.js
frontend/views/: layout.jade  main.jade  test.html
